--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host",
+    "dev:netlify": "netlify dev",
     "build": "npm run build:all",
     "build:client": "tsc && vite build",
     "build:server": "vite build --config vite.config.server.ts",
@@ -67,6 +68,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "netlify-cli": "^23.13.4",
     "postcss": "^8.5.6",
     "sass": "^1.74.1",
     "typescript": "^5.2.2",
